_generated-doc/2.13/config/quarkus-http-http-configuration.adoc

:summaryTableId: quarkus-http-http-configuration
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-http-http-configuration_configuration]]link:#quarkus-http-http-configuration_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-http-http-configuration_quarkus.http.cors]]`link:#quarkus-http-http-configuration_quarkus.http.cors[quarkus.http.cors]`

[.description]
--
Enable the CORS filter.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_CORS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_CORS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.port]]`link:#quarkus-http-http-configuration_quarkus.http.port[quarkus.http.port]`

[.description]
--
The HTTP port

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`8080`


a| [[quarkus-http-http-configuration_quarkus.http.test-port]]`link:#quarkus-http-http-configuration_quarkus.http.test-port[quarkus.http.test-port]`

[.description]
--
The HTTP port used to run tests

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_TEST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_TEST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`8081`


a| [[quarkus-http-http-configuration_quarkus.http.host]]`link:#quarkus-http-http-configuration_quarkus.http.host[quarkus.http.host]`

[.description]
--
The HTTP host In dev/test mode this defaults to localhost, in prod mode this defaults to 0.0.0.0 Defaulting to 0.0.0.0 makes it easier to deploy Quarkus to container, however it is not suitable for dev/test mode as other people on the network can connect to your development machine.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-http-http-configuration_quarkus.http.host-enabled]]`link:#quarkus-http-http-configuration_quarkus.http.host-enabled[quarkus.http.host-enabled]`

[.description]
--
Enable listening to host:port

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_HOST_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_HOST_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.ssl-port]]`link:#quarkus-http-http-configuration_quarkus.http.ssl-port[quarkus.http.ssl-port]`

[.description]
--
The HTTPS port

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`8443`


a| [[quarkus-http-http-configuration_quarkus.http.test-ssl-port]]`link:#quarkus-http-http-configuration_quarkus.http.test-ssl-port[quarkus.http.test-ssl-port]`

[.description]
--
The HTTPS port used to run tests

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_TEST_SSL_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_TEST_SSL_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`8444`


a| [[quarkus-http-http-configuration_quarkus.http.insecure-requests]]`link:#quarkus-http-http-configuration_quarkus.http.insecure-requests[quarkus.http.insecure-requests]`

[.description]
--
If insecure (i.e. http rather than https) requests are allowed. If this is `enabled` then http works as normal. `redirect` will still open the http port, but all requests will be redirected to the HTTPS port. `disabled` will prevent the HTTP port from opening at all.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_INSECURE_REQUESTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_INSECURE_REQUESTS+++`
endif::add-copy-button-to-env-var[]
-- a|
`enabled`, `redirect`, `disabled` 
|`enabled`


a| [[quarkus-http-http-configuration_quarkus.http.http2]]`link:#quarkus-http-http-configuration_quarkus.http.http2[quarkus.http.http2]`

[.description]
--
If this is true (the default) then HTTP/2 will be enabled. Note that for browsers to be able to use it HTTPS must be enabled, and you must be running on JDK11 or above, as JDK8 does not support ALPN.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_HTTP2+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_HTTP2+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.cors.origins]]`link:#quarkus-http-http-configuration_quarkus.http.cors.origins[quarkus.http.cors.origins]`

[.description]
--
Origins allowed for CORS Comma separated list of valid URLs, e.g.: http://www.quarkus.io,http://localhost:3000 In case an entry of the list is surrounded by forward slashes, it is interpreted as a regular expression. The filter allows any origin if this is not set. default: returns any requested origin as valid

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_CORS_ORIGINS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_CORS_ORIGINS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.cors.methods]]`link:#quarkus-http-http-configuration_quarkus.http.cors.methods[quarkus.http.cors.methods]`

[.description]
--
HTTP methods allowed for CORS Comma separated list of valid methods. ex: GET,PUT,POST The filter allows any method if this is not set. default: returns any requested method as valid

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_CORS_METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_CORS_METHODS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.cors.headers]]`link:#quarkus-http-http-configuration_quarkus.http.cors.headers[quarkus.http.cors.headers]`

[.description]
--
HTTP headers allowed for CORS Comma separated list of valid headers. ex: X-Custom,Content-Disposition The filter allows any header if this is not set. default: returns any requested header as valid

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_CORS_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_CORS_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.cors.exposed-headers]]`link:#quarkus-http-http-configuration_quarkus.http.cors.exposed-headers[quarkus.http.cors.exposed-headers]`

[.description]
--
HTTP headers exposed in CORS Comma separated list of valid headers. ex: X-Custom,Content-Disposition default: empty

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_CORS_EXPOSED_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_CORS_EXPOSED_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.cors.access-control-max-age]]`link:#quarkus-http-http-configuration_quarkus.http.cors.access-control-max-age[quarkus.http.cors.access-control-max-age]`

[.description]
--
The `Access-Control-Max-Age` response header value indicating how long the results of a pre-flight request can be cached.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_CORS_ACCESS_CONTROL_MAX_AGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_CORS_ACCESS_CONTROL_MAX_AGE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-http-http-configuration_quarkus.http.cors.access-control-allow-credentials]]`link:#quarkus-http-http-configuration_quarkus.http.cors.access-control-allow-credentials[quarkus.http.cors.access-control-allow-credentials]`

[.description]
--
The `Access-Control-Allow-Credentials` header is used to tell the browsers to expose the response to front-end JavaScript code when the request’s credentials mode Request.credentials is “include”. The value of this header will default to `true` if `quarkus.http.cors.origins` property is set and there is a match with the precise `Origin` header and that header is not '++*++'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_CORS_ACCESS_CONTROL_ALLOW_CREDENTIALS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_CORS_ACCESS_CONTROL_ALLOW_CREDENTIALS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.credentials-provider]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.credentials-provider[quarkus.http.ssl.certificate.credentials-provider]`

[.description]
--
The `CredentialsProvider`++}++. If this property is configured then a matching 'CredentialsProvider' will be used to get the keystore, keystore key and truststore passwords unless these passwords have already been configured. Please note that using MicroProfile `ConfigSource` which is directly supported by Quarkus Configuration should be preferred unless using `CredentialsProvider` provides for some additional security and dynamism.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_CREDENTIALS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_CREDENTIALS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.credentials-provider-name]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.credentials-provider-name[quarkus.http.ssl.certificate.credentials-provider-name]`

[.description]
--
The credentials provider bean name. 
It is the `&++#++64;Named` value of the credentials provider bean. It is used to discriminate if multiple CredentialsProvider beans are available. It is recommended to set this property even if there is only one credentials provider currently available to ensure the same provider is always found in deployments where more than one provider may be available.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.files]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.files[quarkus.http.ssl.certificate.files]`

[.description]
--
The list of path to server certificates using the PEM format. Specifying multiple files require SNI to be enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_FILES+++`
endif::add-copy-button-to-env-var[]
--|list of path 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-files]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-files[quarkus.http.ssl.certificate.key-files]`

[.description]
--
The list of path to server certificates private key file using the PEM format. Specifying multiple files require SNI to be enabled. The order of the key files must match the order of the certificates.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_FILES+++`
endif::add-copy-button-to-env-var[]
--|list of path 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-file]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-file[quarkus.http.ssl.certificate.key-store-file]`

[.description]
--
An optional key store which holds the certificate information instead of specifying separate files.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-file-type]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-file-type[quarkus.http.ssl.certificate.key-store-file-type]`

[.description]
--
An optional parameter to specify type of the key store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-provider]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-provider[quarkus.http.ssl.certificate.key-store-provider]`

[.description]
--
An optional parameter to specify a provider of the key store file. If not given, the provider is automatically detected based on the key store file type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-password]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-password[quarkus.http.ssl.certificate.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, and if it can not be retrieved from `CredentialsProvider`, then the default ("password") is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|`password`


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-password-key]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-password-key[quarkus.http.ssl.certificate.key-store-password-key]`

[.description]
--
A parameter to specify a `CredentialsProvider` property key which can be used to get the password of the key store file from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-key-alias]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-key-alias[quarkus.http.ssl.certificate.key-store-key-alias]`

[.description]
--
An optional parameter to select a specific key in the key store. When SNI is disabled, if the key store contains multiple keys and no alias is specified, the behavior is undefined.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_ALIAS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-key-password]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-key-password[quarkus.http.ssl.certificate.key-store-key-password]`

[.description]
--
An optional parameter to define the password for the key, in case it's different from `key-store-password` If not given then it may be retrieved from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-key-password-key]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-key-password-key[quarkus.http.ssl.certificate.key-store-key-password-key]`

[.description]
--
A parameter to specify a `CredentialsProvider` property key which can be used to get the password for the key from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-file]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-file[quarkus.http.ssl.certificate.trust-store-file]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-file-type]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-file-type[quarkus.http.ssl.certificate.trust-store-file-type]`

[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-provider]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-provider[quarkus.http.ssl.certificate.trust-store-provider]`

[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-password]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-password[quarkus.http.ssl.certificate.trust-store-password]`

[.description]
--
A parameter to specify the password of the trust store file. If not given then it may be retrieved from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-password-key]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-password-key[quarkus.http.ssl.certificate.trust-store-password-key]`

[.description]
--
A parameter to specify a `CredentialsProvider` property key which can be used to get the password of the trust store file from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-cert-alias]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-cert-alias[quarkus.http.ssl.certificate.trust-store-cert-alias]`

[.description]
--
An optional parameter to trust only one specific certificate in the trust store (instead of trusting all certificates in the store).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_CERT_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_CERT_ALIAS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.cipher-suites]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.cipher-suites[quarkus.http.ssl.cipher-suites]`

[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CIPHER_SUITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CIPHER_SUITES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.protocols]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.protocols[quarkus.http.ssl.protocols]`

[.description]
--
The list of protocols to explicitly enable.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-http-http-configuration_quarkus.http.ssl.sni]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.sni[quarkus.http.ssl.sni]`

[.description]
--
Enables Server Name Indication (SNI), an TLS extension allowing the server to use multiple certificates. The client indicate the server name during the TLS handshake, allowing the server to select the right certificate.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_SNI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_SNI+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.handle-100-continue-automatically]]`link:#quarkus-http-http-configuration_quarkus.http.handle-100-continue-automatically[quarkus.http.handle-100-continue-automatically]`

[.description]
--
When set to `true`, the HTTP server automatically sends `100 CONTINUE` response when the request expects it (with the `Expect: 100-Continue` header).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_HANDLE_100_CONTINUE_AUTOMATICALLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_HANDLE_100_CONTINUE_AUTOMATICALLY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.io-threads]]`link:#quarkus-http-http-configuration_quarkus.http.io-threads[quarkus.http.io-threads]`

[.description]
--
The number if IO threads used to perform IO. This will be automatically set to a reasonable value based on the number of CPU cores if it is not provided. If this is set to a higher value than the number of Vert.x event loops then it will be capped at the number of event loops. In general this should be controlled by setting quarkus.vertx.event-loops-pool-size, this setting should only be used if you want to limit the number of HTTP io threads to a smaller number than the total number of IO threads.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_IO_THREADS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_IO_THREADS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-header-size]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-header-size[quarkus.http.limits.max-header-size]`

[.description]
--
The maximum length of all headers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_LIMITS_MAX_HEADER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_LIMITS_MAX_HEADER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`20K`


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-body-size]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-body-size[quarkus.http.limits.max-body-size]`

[.description]
--
The maximum size of a request body.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_LIMITS_MAX_BODY_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_LIMITS_MAX_BODY_SIZE+++`
endif::add-copy-button-to-env-var[]
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10240K`


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-chunk-size]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-chunk-size[quarkus.http.limits.max-chunk-size]`

[.description]
--
The max HTTP chunk size

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_LIMITS_MAX_CHUNK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_LIMITS_MAX_CHUNK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`8192`


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-initial-line-length]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-initial-line-length[quarkus.http.limits.max-initial-line-length]`

[.description]
--
The maximum length of the initial line (e.g. `"GET / HTTP/1.0"`).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_LIMITS_MAX_INITIAL_LINE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_LIMITS_MAX_INITIAL_LINE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--|int 
|`4096`


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-form-attribute-size]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-form-attribute-size[quarkus.http.limits.max-form-attribute-size]`

[.description]
--
The maximum length of a form attribute.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_LIMITS_MAX_FORM_ATTRIBUTE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_LIMITS_MAX_FORM_ATTRIBUTE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`2048`


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-connections]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-connections[quarkus.http.limits.max-connections]`

[.description]
--
The maximum number of connections that are allowed at any one time. If this is set it is recommended to set a short idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_LIMITS_MAX_CONNECTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_LIMITS_MAX_CONNECTIONS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-http-http-configuration_quarkus.http.idle-timeout]]`link:#quarkus-http-http-configuration_quarkus.http.idle-timeout[quarkus.http.idle-timeout]`

[.description]
--
Http connection idle timeout

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30M`


a| [[quarkus-http-http-configuration_quarkus.http.read-timeout]]`link:#quarkus-http-http-configuration_quarkus.http.read-timeout[quarkus.http.read-timeout]`

[.description]
--
Http connection read timeout for blocking IO. This is the maximum amount of time a thread will wait for data, before an IOException will be thrown and the connection closed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-http-http-configuration_quarkus.http.body.handle-file-uploads]]`link:#quarkus-http-http-configuration_quarkus.http.body.handle-file-uploads[quarkus.http.body.handle-file-uploads]`

[.description]
--
Whether the files sent using `multipart/form-data` will be stored locally. 
If `true`, they will be stored in `quarkus.http.body-handler.uploads-directory` and will be made available via `io.vertx.ext.web.RoutingContext.fileUploads()`. Otherwise, the files sent using `multipart/form-data` will not be stored locally, and `io.vertx.ext.web.RoutingContext.fileUploads()` will always return an empty collection. Note that even with this option being set to `false`, the `multipart/form-data` requests will be accepted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_HANDLE_FILE_UPLOADS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_HANDLE_FILE_UPLOADS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.body.uploads-directory]]`link:#quarkus-http-http-configuration_quarkus.http.body.uploads-directory[quarkus.http.body.uploads-directory]`

[.description]
--
The directory where the files sent using `multipart/form-data` should be stored. 
Either an absolute path or a path relative to the current directory of the application process.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_UPLOADS_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_UPLOADS_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`${java.io.tmpdir}/uploads`


a| [[quarkus-http-http-configuration_quarkus.http.body.merge-form-attributes]]`link:#quarkus-http-http-configuration_quarkus.http.body.merge-form-attributes[quarkus.http.body.merge-form-attributes]`

[.description]
--
Whether the form attributes should be added to the request parameters. 
If `true`, the form attributes will be added to the request parameters; otherwise the form parameters will not be added to the request parameters

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_MERGE_FORM_ATTRIBUTES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_MERGE_FORM_ATTRIBUTES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.body.delete-uploaded-files-on-end]]`link:#quarkus-http-http-configuration_quarkus.http.body.delete-uploaded-files-on-end[quarkus.http.body.delete-uploaded-files-on-end]`

[.description]
--
Whether the uploaded files should be removed after serving the request. 
If `true` the uploaded files stored in `quarkus.http.body-handler.uploads-directory` will be removed after handling the request. Otherwise, the files will be left there forever.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_DELETE_UPLOADED_FILES_ON_END+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_DELETE_UPLOADED_FILES_ON_END+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.body.preallocate-body-buffer]]`link:#quarkus-http-http-configuration_quarkus.http.body.preallocate-body-buffer[quarkus.http.body.preallocate-body-buffer]`

[.description]
--
Whether the body buffer should pre-allocated based on the `Content-Length` header value. 
If `true` the body buffer is pre-allocated according to the size read from the `Content-Length` header. Otherwise, the body buffer is pre-allocated to 1KB, and is resized dynamically

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_PREALLOCATE_BODY_BUFFER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_PREALLOCATE_BODY_BUFFER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.body.multipart.file-content-types]]`link:#quarkus-http-http-configuration_quarkus.http.body.multipart.file-content-types[quarkus.http.body.multipart.file-content-types]`

[.description]
--
A comma-separated list of `ContentType` to indicate whether a given multipart field should be handled as a file part. You can use this setting to force HTTP-based extensions to parse a message part as a file based on its content type. For now, this setting only works when using RESTEasy Reactive.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_MULTIPART_FILE_CONTENT_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_MULTIPART_FILE_CONTENT_TYPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.auth.session.encryption-key]]`link:#quarkus-http-http-configuration_quarkus.http.auth.session.encryption-key[quarkus.http.auth.session.encryption-key]`

[.description]
--
The encryption key that is used to store persistent logins (e.g. for form auth). Logins are stored in a persistent cookie that is encrypted with AES-256 using a key derived from a SHA-256 hash of the key that is provided here. If no key is provided then an in-memory one will be generated, this will change on every restart though so it is not suitable for production environments. This must be more than 16 characters long for security reasons

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_AUTH_SESSION_ENCRYPTION_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_AUTH_SESSION_ENCRYPTION_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.so-reuse-port]]`link:#quarkus-http-http-configuration_quarkus.http.so-reuse-port[quarkus.http.so-reuse-port]`

[.description]
--
Enable socket reuse port (linux/macOs native transport only)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SO_REUSE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SO_REUSE_PORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.tcp-quick-ack]]`link:#quarkus-http-http-configuration_quarkus.http.tcp-quick-ack[quarkus.http.tcp-quick-ack]`

[.description]
--
Enable tcp quick ack (linux native transport only)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_TCP_QUICK_ACK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_TCP_QUICK_ACK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.tcp-cork]]`link:#quarkus-http-http-configuration_quarkus.http.tcp-cork[quarkus.http.tcp-cork]`

[.description]
--
Enable tcp cork (linux native transport only)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_TCP_CORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_TCP_CORK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.tcp-fast-open]]`link:#quarkus-http-http-configuration_quarkus.http.tcp-fast-open[quarkus.http.tcp-fast-open]`

[.description]
--
Enable tcp fast open (linux native transport only)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_TCP_FAST_OPEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_TCP_FAST_OPEN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.accept-backlog]]`link:#quarkus-http-http-configuration_quarkus.http.accept-backlog[quarkus.http.accept-backlog]`

[.description]
--
The accept backlog, this is how many connections can be waiting to be accepted before connections start being rejected

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ACCEPT_BACKLOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ACCEPT_BACKLOG+++`
endif::add-copy-button-to-env-var[]
--|int 
|`-1`


a| [[quarkus-http-http-configuration_quarkus.http.domain-socket]]`link:#quarkus-http-http-configuration_quarkus.http.domain-socket[quarkus.http.domain-socket]`

[.description]
--
Path to a unix domain socket

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_DOMAIN_SOCKET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_DOMAIN_SOCKET+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/var/run/io.quarkus.app.socket`


a| [[quarkus-http-http-configuration_quarkus.http.domain-socket-enabled]]`link:#quarkus-http-http-configuration_quarkus.http.domain-socket-enabled[quarkus.http.domain-socket-enabled]`

[.description]
--
Enable listening to host:port

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_DOMAIN_SOCKET_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_DOMAIN_SOCKET_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.record-request-start-time]]`link:#quarkus-http-http-configuration_quarkus.http.record-request-start-time[quarkus.http.record-request-start-time]`

[.description]
--
If this is true then the request start time will be recorded to enable logging of total request time. This has a small performance penalty, so is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_RECORD_REQUEST_START_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_RECORD_REQUEST_START_TIME+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.enabled]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.enabled[quarkus.http.access-log.enabled]`

[.description]
--
If access logging is enabled. By default this will log via the standard logging facility

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ACCESS_LOG_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ACCESS_LOG_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.exclude-pattern]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.exclude-pattern[quarkus.http.access-log.exclude-pattern]`

[.description]
--
A regular expression that can be used to exclude some paths from logging.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ACCESS_LOG_EXCLUDE_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ACCESS_LOG_EXCLUDE_PATTERN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.access-log.pattern]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.pattern[quarkus.http.access-log.pattern]`

[.description]
--
The access log pattern.

If this is the string `common`, `combined` or `long` then this will use one of the specified named formats:

- common: `%h %l %u %t "%r" %s %b`
- combined: `%h %l %u %t "%r" %s %b "%{i,Referer}" "%{i,User-Agent}"`
- long: `%r\n%{ALL_REQUEST_HEADERS}`

Otherwise, consult the Quarkus documentation for the full list of variables that can be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ACCESS_LOG_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ACCESS_LOG_PATTERN+++`
endif::add-copy-button-to-env-var[]
--|string 
|`common`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.log-to-file]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.log-to-file[quarkus.http.access-log.log-to-file]`

[.description]
--
If logging should be done to a separate file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ACCESS_LOG_LOG_TO_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ACCESS_LOG_LOG_TO_FILE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.base-file-name]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.base-file-name[quarkus.http.access-log.base-file-name]`

[.description]
--
The access log file base name, defaults to 'quarkus' which will give a log file name of 'quarkus.log'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ACCESS_LOG_BASE_FILE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ACCESS_LOG_BASE_FILE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`quarkus`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.log-directory]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.log-directory[quarkus.http.access-log.log-directory]`

[.description]
--
The log directory to use when logging access to a file If this is not set then the current working directory is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ACCESS_LOG_LOG_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ACCESS_LOG_LOG_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.access-log.log-suffix]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.log-suffix[quarkus.http.access-log.log-suffix]`

[.description]
--
The log file suffix

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ACCESS_LOG_LOG_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ACCESS_LOG_LOG_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`.log`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.category]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.category[quarkus.http.access-log.category]`

[.description]
--
The log category to use if logging is being done via the standard log mechanism (i.e. if base-file-name is empty).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ACCESS_LOG_CATEGORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ACCESS_LOG_CATEGORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`io.quarkus.http.access-log`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.rotate]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.rotate[quarkus.http.access-log.rotate]`

[.description]
--
If the log should be rotated daily

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_ACCESS_LOG_ROTATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_ACCESS_LOG_ROTATE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.unhandled-error-content-type-default]]`link:#quarkus-http-http-configuration_quarkus.http.unhandled-error-content-type-default[quarkus.http.unhandled-error-content-type-default]`

[.description]
--
Provides a hint (optional) for the default content type of responses generated for the errors not handled by the application. 
If the client requested a supported content-type in request headers (e.g. "Accept: application/json", "Accept: text/html"), Quarkus will use that content type. 
Otherwise, it will default to the content type configured here.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_UNHANDLED_ERROR_CONTENT_TYPE_DEFAULT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_UNHANDLED_ERROR_CONTENT_TYPE_DEFAULT+++`
endif::add-copy-button-to-env-var[]
-- a|
`json`, `html` 
|


a| [[quarkus-http-http-configuration_quarkus.http.proxy.proxy-address-forwarding]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.proxy-address-forwarding[quarkus.http.proxy.proxy-address-forwarding]`

[.description]
--
If this is true then the address, scheme etc. will be set from headers forwarded by the proxy server, such as `X-Forwarded-For`. This should only be set if you are behind a proxy that sets these headers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_PROXY_PROXY_ADDRESS_FORWARDING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_PROXY_PROXY_ADDRESS_FORWARDING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.proxy.allow-forwarded]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.allow-forwarded[quarkus.http.proxy.allow-forwarded]`

[.description]
--
If this is true and proxy address forwarding is enabled then the standard `Forwarded` header will be used. In case the not standard `X-Forwarded-For` header is enabled and detected on HTTP requests, the standard header has the precedence. Activating this together with `quarkus.http.proxy.allow-x-forwarded` has security implications as clients can forge requests with a forwarded header that is not overwritten by the proxy. Therefore, proxies should strip unexpected `X-Forwarded` or `X-Forwarded-++*++` headers from the client.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_PROXY_ALLOW_FORWARDED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_PROXY_ALLOW_FORWARDED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.proxy.allow-x-forwarded]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.allow-x-forwarded[quarkus.http.proxy.allow-x-forwarded]`

[.description]
--
If either this or `allow-forwarded` are true and proxy address forwarding is enabled then the not standard `Forwarded` header will be used. In case the standard `Forwarded` header is enabled and detected on HTTP requests, the standard header has the precedence. Activating this together with `quarkus.http.proxy.allow-x-forwarded` has security implications as clients can forge requests with a forwarded header that is not overwritten by the proxy. Therefore, proxies should strip unexpected `X-Forwarded` or `X-Forwarded-++*++` headers from the client.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_PROXY_ALLOW_X_FORWARDED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_PROXY_ALLOW_X_FORWARDED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-http-http-configuration_quarkus.http.proxy.enable-forwarded-host]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.enable-forwarded-host[quarkus.http.proxy.enable-forwarded-host]`

[.description]
--
Enable override the received request's host through a forwarded host header.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_PROXY_ENABLE_FORWARDED_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_PROXY_ENABLE_FORWARDED_HOST+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.proxy.forwarded-host-header]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.forwarded-host-header[quarkus.http.proxy.forwarded-host-header]`

[.description]
--
Configure the forwarded host header to be used if override enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_PROXY_FORWARDED_HOST_HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_PROXY_FORWARDED_HOST_HEADER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`X-Forwarded-Host`


a| [[quarkus-http-http-configuration_quarkus.http.proxy.enable-forwarded-prefix]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.enable-forwarded-prefix[quarkus.http.proxy.enable-forwarded-prefix]`

[.description]
--
Enable prefix the received request's path with a forwarded prefix header.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_PROXY_ENABLE_FORWARDED_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_PROXY_ENABLE_FORWARDED_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.proxy.forwarded-prefix-header]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.forwarded-prefix-header[quarkus.http.proxy.forwarded-prefix-header]`

[.description]
--
Configure the forwarded prefix header to be used if prefixing enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_PROXY_FORWARDED_PREFIX_HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_PROXY_FORWARDED_PREFIX_HEADER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`X-Forwarded-Prefix`


a| [[quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.case-sensitive]]`link:#quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.case-sensitive[quarkus.http.same-site-cookie."same-site-cookie".case-sensitive]`

[.description]
--
If the cookie pattern is case-sensitive

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SAME_SITE_COOKIE__SAME_SITE_COOKIE__CASE_SENSITIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SAME_SITE_COOKIE__SAME_SITE_COOKIE__CASE_SENSITIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.value]]`link:#quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.value[quarkus.http.same-site-cookie."same-site-cookie".value]`

[.description]
--
The value to set in the samesite attribute

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SAME_SITE_COOKIE__SAME_SITE_COOKIE__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SAME_SITE_COOKIE__SAME_SITE_COOKIE__VALUE+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `strict`, `lax` 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.enable-client-checker]]`link:#quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.enable-client-checker[quarkus.http.same-site-cookie."same-site-cookie".enable-client-checker]`

[.description]
--
Some User Agents break when sent SameSite=None, this will detect them and avoid sending the value

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SAME_SITE_COOKIE__SAME_SITE_COOKIE__ENABLE_CLIENT_CHECKER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SAME_SITE_COOKIE__SAME_SITE_COOKIE__ENABLE_CLIENT_CHECKER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.add-secure-for-none]]`link:#quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.add-secure-for-none[quarkus.http.same-site-cookie."same-site-cookie".add-secure-for-none]`

[.description]
--
If this is true then the 'secure' attribute will automatically be sent on cookies with a SameSite attribute of None.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SAME_SITE_COOKIE__SAME_SITE_COOKIE__ADD_SECURE_FOR_NONE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SAME_SITE_COOKIE__SAME_SITE_COOKIE__ADD_SECURE_FOR_NONE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.header.-header-.path]]`link:#quarkus-http-http-configuration_quarkus.http.header.-header-.path[quarkus.http.header."header".path]`

[.description]
--
The path this header should be applied

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_HEADER__HEADER__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_HEADER__HEADER__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/*`


a| [[quarkus-http-http-configuration_quarkus.http.header.-header-.value]]`link:#quarkus-http-http-configuration_quarkus.http.header.-header-.value[quarkus.http.header."header".value]`

[.description]
--
The value for this header configuration

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_HEADER__HEADER__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_HEADER__HEADER__VALUE+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-http-http-configuration_quarkus.http.header.-header-.methods]]`link:#quarkus-http-http-configuration_quarkus.http.header.-header-.methods[quarkus.http.header."header".methods]`

[.description]
--
The HTTP methods for this header configuration

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_HEADER__HEADER__METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_HEADER__HEADER__METHODS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.filter.-filter-.matches]]`link:#quarkus-http-http-configuration_quarkus.http.filter.-filter-.matches[quarkus.http.filter."filter".matches]`

[.description]
--
A regular expression for the paths matching this configuration

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_FILTER__FILTER__MATCHES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_FILTER__FILTER__MATCHES+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-http-http-configuration_quarkus.http.filter.-filter-.header-header]]`link:#quarkus-http-http-configuration_quarkus.http.filter.-filter-.header-header[quarkus.http.filter."filter".header]`

[.description]
--
Additional HTTP Headers always sent in the response

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_FILTER__FILTER__HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_FILTER__FILTER__HEADER+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-http-http-configuration_quarkus.http.filter.-filter-.methods]]`link:#quarkus-http-http-configuration_quarkus.http.filter.-filter-.methods[quarkus.http.filter."filter".methods]`

[.description]
--
The HTTP methods for this path configuration

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_FILTER__FILTER__METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_FILTER__FILTER__METHODS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.filter.-filter-.order]]`link:#quarkus-http-http-configuration_quarkus.http.filter.-filter-.order[quarkus.http.filter."filter".order]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_FILTER__FILTER__ORDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_FILTER__FILTER__ORDER+++`
endif::add-copy-button-to-env-var[]
--|int 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]

[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
